--- a/index.html
+++ b/index.html
@@ -6,17 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clone Yu-Gi-Oh</title>
 
-    <style>
-        @font-face{
-            font-family: "Yugioh";
-            src: url(/src/fontes/fonte-yu-gi-oh.otf);
-        }
-    </style>
+    <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="/src/css/reset.css">
+    <link rel="stylesheet" href="/src/css/fontes.css">
+    <link rel="stylesheet" href="/src/css/image.css">
 </head>
 
 <body>
     <header class="cabecalho">
-        <h1 class="titulo" style="font-family: 'Yugioh'" >Clone Yu-Gi-Oh!</h1>
+        <h1 class="titulo">Clone Yu-Gi-Oh!</h1>
     </header>
     <main class="slider">
         <button class="btn-seta btn-voltar" id="btn-voltar">
