--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/fontes.css">
     <link rel="stylesheet" href="/src/css/image.css">
+    <link rel="stylesheet" href="/src/css/responsivo.css">
+    
 </head>
 
 <body>
@@ -219,6 +221,7 @@
         </button>
     </main>
 
+    <script src="src/js/index.js"></script>
 </body>
 
 </html>
